--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 class="title">Todo リスト</h1>
         </header>
         <div id="radio">
-            <input type="radio" name="radio">すべて</input>
+            <input type="radio" name="radio" checked="checked">すべて</input>
             <input type="radio" name="radio">作業中</input>
             <input type="radio" name="radio">完了</input>
         </div>
